GearsetPOC/force-app/main/default/objects/MC_Calendar__c/MC_Calendar__c.object-meta.xml
<CustomObject>
    <label>Calendar Item</label>
    <nameField>
        <label>Calendar Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>