GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Bounces__c.field-meta.xml
<CustomField>
    <fullName>Bounces__c</fullName>
    <label>Bounces</label>
    <length>20</length>
    <type>Text</type>
</CustomField>