GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>Clicks</label>
    <length>20</length>
    <type>Text</type>
</CustomField>