GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Deliverability_Rate__c.field-meta.xml
<CustomField>
    <fullName>Deliverability_Rate__c</fullName>
    <label>Deliverability Rate (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>