GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Email_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Job_ID__c</fullName>
    <label>Email Job ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>