GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Email_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Job_Status__c</fullName>
    <label>Email Job Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>