GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <label>Email Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>