GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <type>DateTime</type>
</CustomField>