GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/EndDate_forCalender__c.field-meta.xml
<CustomField>
    <fullName>EndDate_forCalender__c</fullName>
    <formula>Date_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndDate_forCalender</label>
    <type>DateTime</type>
</CustomField>