GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/MC_Calendar_Master__c.field-meta.xml
<CustomField>
    <fullName>MC_Calendar_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar Category</label>
    <referenceTo>MC_Calendar_Master__c</referenceTo>
    <relationshipLabel>Calendar Item</relationshipLabel>
    <relationshipName>MC_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>