GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Message_Name__c.field-meta.xml
<CustomField>
    <fullName>Message_Name__c</fullName>
    <label>Message Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>