GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>Open_Rate__c</fullName>
    <label>Open Rate (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>