GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/SMS_Send_ID__c.field-meta.xml
<CustomField>
    <fullName>SMS_Send_ID__c</fullName>
    <label>SMS Send ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>