GearsetPOC/force-app/main/default/objects/MC_Calendar__c/fields/Total_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivered__c</fullName>
    <label>Total Delivered</label>
    <length>20</length>
    <type>Text</type>
</CustomField>