GearsetPOC/force-app/main/default/objects/MC_Calendar__c/listViews/All_Calendar_Item.listView-meta.xml
<ListView>
    <fullName>All_Calendar_Item</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Email_Name__c</columns>
    <columns>Email_Subject__c</columns>
    <columns>Email_Type__c</columns>
    <columns>Message_Name__c</columns>
    <columns>MC_Calendar_Master__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Calendar Item</label>
</ListView>